Titulo: Se crean pruebas para las validaciones  -descripcion: Se crean pruebas unitarias para las validaciones

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,13 @@
     "noImplicitAny": true,
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "@validations": ["./src/shared/validations"],
+      "@ValueObjectBase": ["./src/shared/domain/value-object"],
+      "@context/product/domain": ["./src/subdomains/commodity/contexts/planning/domain"],
+      "@context/product/applications": ["./src/subdomains/commodity/contexts/planning/application"],
+      "@context/product/infrastructure": ["./src/subdomains/commodity/contexts/planning/infrastructure"],
+    },
   }
 }
