--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,22 @@
-{}
+{
+    "workbench.colorCustomizations": {
+        "activityBar.activeBackground": "#69e653",
+        "activityBar.background": "#69e653",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#7486eb",
+        "activityBarBadge.foreground": "#15202b",
+        "commandCenter.border": "#15202b99",
+        "sash.hoverBorder": "#69e653",
+        "statusBar.background": "#42e026",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#32b91a",
+        "statusBarItem.remoteBackground": "#42e026",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#42e026",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#42e02699",
+        "titleBar.inactiveForeground": "#15202b99"
+    },
+    "peacock.color": "#42E026"
+}
