--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "coveragePathIgnorePatterns": [
       "/node_modules/",
       "/test/",
+      "<rootDir>/shared/sofka/*",
       "<rootDir>/main.ts",
       "<rootDir>/app.module.ts",
       "/index\\.ts$"    ],
