--- a/package.json
+++ b/package.json
@@ -8,23 +8,30 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "start": "set SCOPE=prod & nest start",
+    "start-win": "set SCOPE=prod & nest start",
+    "start:dev": " set SCOPE=dev & nest start --watch",
+    "start:dev-win": "set SCOPE=dev & nest start --watch",
+    "start:debug": " set SCOPE=dev nest & start --debug --watch",
+    "start:debug-win": "set SCOPE=dev & nest start --debug --watch",
+    "start:prod": " set SCOPE=prod & node dist/main",
+    "lint": "set eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "set SCOPE=test & jest",
+    "test:watch": "set SCOPE=test & jest --watch",
+    "test:cov": "set SCOPE=test & jest --coverage",
+    "test:debug": "set SCOPE=test & node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "set SCOPE=test & jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
+    "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "typeorm": "^0.3.12",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -73,7 +80,8 @@
       "<rootDir>/shared/sofka/*",
       "<rootDir>/main.ts",
       "<rootDir>/app.module.ts",
-      "/index\\.ts$"    ],
+      "/index\\.ts$"
+    ],
     "moduleNameMapper": {
       "^@validations(.*)$": "<rootDir>/shared/validations$1",
       "^@ValueObjectBase(.*)$": "<rootDir>/shared/domain/value-object$1",
